--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@
     <header>
         <a href="#" class="logo">dishant mhakhariya</a>
         <ul>
-            <li><a href="index.html" class="active" target="_blank">VERSE</a></li>
+            <li><a href="index1.html" class="active" target="_blank">VERSE</a></li>
             <li><a href="PARALLAX.html" target="_blank">NUCLEO</a></li>
             <li><a href="expense.html" target="_blank">MUSEMIND</a></li>
             <li><a href="music.html" target="_blank">FIREART</a></li>
